# podcast-to-reels

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: architecture_diagram.md  modules_overview.md  web_interface.md
podcast_to_reels/downloader/: __init__.py  downloader.py
podcast_to_reels/image_generator/: __init__.py  image_generator.py
podcast_to_reels/scene_splitter/: __init__.py  scene_splitter.py
podcast_to_reels/transcriber/: __init__.py  transcriber.py
podcast_to_reels/video_composer/: __init__.py  video_composer.py
scripts/: run_pipeline.py
tests/: conftest.py  test_downloader.py  test_image_generator.py  test_scene_splitter.py  test_transcriber.py  test_video_composer.py
web/: app.py
web/templates/: form.html  result.html
